src/objects/Employment_History__c.object
<CustomObject>
    <description>This represents an employment history for a contact. The employer may be an Business Organization Account if found.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <description>The Contact for which this employment history belongs</description>
        <inlineHelpText>The Contact for which this employment history belongs</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employment Histories</relationshipLabel>
        <relationshipName>Employment_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Employer_Address__c</fullName>
        <description>Employer Address information for re-enrollment</description>
        <label>Employer Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employer_City__c</fullName>
        <description>The Employer City</description>
        <label>Employer City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <description>The Employer Name</description>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_State__c</fullName>
        <description>The Employee State or Provice</description>
        <label>Employer State/Provice</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Employer of the Contact for this employment history. This will be a Business Organization Account if specified/found.</description>
        <inlineHelpText>The Employer of the Contact for this employment history. This will be a Business Organization Account if specified/found.</inlineHelpText>
        <label>Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employment Histories</relationshipLabel>
        <relationshipName>Employment_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Holding_Name__c</fullName>
        <description>Required EASY field. Will hold employer name if not found</description>
        <inlineHelpText>Required EASY field. Will hold employer name if not found</inlineHelpText>
        <label>Holding Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>The Contact&apos;s position for this employment history</description>
        <inlineHelpText>The Contact&apos;s position for this employment history</inlineHelpText>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Id__c</fullName>
        <description>Specifies the previous id if any</description>
        <externalId>true</externalId>
        <label>Previous Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object_JSON__c</fullName>
        <description>Required EASY field</description>
        <inlineHelpText>Required EASY field</inlineHelpText>
        <label>Related Object JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <description>Your title/primary responsibilities question for re-enrollment</description>
        <label>Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required EASY field</description>
        <inlineHelpText>Required EASY field</inlineHelpText>
        <label>User Created</label>
        <type>Checkbox</type>
    </fields>
    <label>Employment History</label>
    <nameField>
        <displayFormat>EH-{000000}</displayFormat>
        <label>Employment History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>